k8s-resources/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - vault.givebackcincinnati.org
    secretName: givebackcincinnati-tls
  rules:
  - host: vault.givebackcincinnati.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: givebackcincinnati-vault
            port:
              number: 8200
